Fix: Remove white border on mobile job creation

--- a/src/index.css
+++ b/src/index.css
@@ -363,8 +363,8 @@ All colors MUST be HSL.
     -webkit-box-shadow: 0 0 0px 1000px hsla(0 0% 100% / 0.05) inset !important;
     box-shadow: 0 0 0px 1000px hsla(0 0% 100% / 0.05) inset !important;
     transition: background-color 9999s ease-in-out 0s !important;
-    border-color: hsla(0 0% 100% / 0.2) !important;
-    border-width: 1px !important;
+    border-color: transparent !important;
+    border-width: 0 !important;
   }
 
   /* Force browser suggestion dropdowns to use white text */
@@ -389,8 +389,8 @@ All colors MUST be HSL.
     caret-color: hsl(210 40% 98%) !important;
     -webkit-box-shadow: 0 0 0px 1000px hsla(0 0% 100% / 0.05) inset !important;
     box-shadow: 0 0 0px 1000px hsla(0 0% 100% / 0.05) inset !important;
-    border-color: hsla(0 0% 100% / 0.2) !important;
-    border-width: 1px !important;
+    border-color: transparent !important;
+    border-width: 0 !important;
   }
 }
 
